@@ -3,10 +3,11 @@ English Dolibarr ChangeLog
 ***** ChangeLog for 2.9 compared to 2.8 *****
 
 For users:
-New: Add "payment due before" field in invoice exports
+- New: Add "payment due before" field in invoice exports
+- New: Add feature to resize or crop image files (for products photos)
 
 For developers:
-
+- More comments in code
 
 
 ***** ChangeLog for 2.8 compared to 2.7 *****
